--- a/client/src/components/Layout/styles.module.css
+++ b/client/src/components/Layout/styles.module.css
@@ -1,10 +1,9 @@
 .container {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    min-height: calc(100vh - var(--header-height));
+  display: flex;
+  min-height: 100vh;
 }
 
 .content {
-    padding: 50px 100px;
+  padding: 50px 100px;
+  width: 100%;
 }
