--- a/client/src/components/Sidebar/styles.module.css
+++ b/client/src/components/Sidebar/styles.module.css
@@ -1,25 +1,27 @@
 .sidebar {
-    width: 117px;
-    background-color: var(--black);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 117px;
+  background-color: var(--black);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
 .icons {
-    display: flex;
-    flex-direction: column;
-    gap: 1.3em;
+  display: flex;
+  flex-direction: column;
+  gap: 1.3em;
+  margin-top: 10em;
 }
 
 .icons img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .copyright {
-    align-self: flex-end;
-    transform: rotate(-90deg);
-    color: #FFF;
-
+  transform: rotate(-90deg);
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  align-self: flex-end;
 }
