--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 *,
 *::after,
@@ -8,14 +8,19 @@
   padding: 0;
 }
 
+html,
 body {
-  font-family: 'Roboto', sans-serif;
+  height: 100%;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
 }
 
 :root {
   --black: #020203;
-  --primary: #FF0101;
-  --light-grey: #FBFBFB;
+  --primary: #ff0101;
+  --light-grey: #fbfbfb;
   --header-height: 91px;
 }
 
