--- a/client/src/pages/Dashboard/styles.module.css
+++ b/client/src/pages/Dashboard/styles.module.css
@@ -1,6 +1,18 @@
+.main_container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 5em;
+}
+
 .card_container {
-    display: flex;
-    flex-direction: column;
-    gap: 2em;
-    max-width: 320px;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  max-width: 320px;
+}
+
+.chart_container {
+  width: 70%;
+  max-height: 500px;
 }
