--- a/client/src/pages/Dashboard/styles.module.css
+++ b/client/src/pages/Dashboard/styles.module.css
@@ -16,3 +16,13 @@
   width: 70%;
   max-height: 500px;
 }
+
+.squared_container {
+  width: 400px;
+  height: 400px;
+}
+
+.squared_charts_container {
+  display: flex;
+  align-items: center;
+}
